# algolib

./: .gitignore  CMakeLists.txt  README.md
cmake/: algolibConfig.cmake.in
include/algolib/: algolib.h
include/algolib/sort/: selection_sort.h
tests/: CMakeLists.txt  test_selection_sort.cpp
